--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 <div id='container'>
 </div>
 
-<script src="bundle.js" type="text/javascript" charset="utf-8"></script>
+<script src="assets/bundle.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
