Replication UI Fixed

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-<div id='container'>
+<div class='row' id='container'>
 </div>
 
 <script src="assets/bundle.js" type="text/javascript" charset="utf-8"></script>
