--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,16 @@
 <html>
 <head>
 	<title>App Fabric</title>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 </head>
-<body style='margin:0'>
-<div id='container'>
-</div>
+<body  >
+	<div class="container-fluid">
+		<div class='row'>
+			<div class="col-md-12" id='container'></div>
+		</div>
+	</div>
 
 <script src="assets/bundle.js" type="text/javascript" charset="utf-8"></script>
 </body>
