--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 </head>
-<body  >
-	<div class="container-fluid">
-		<div class='row'>
-			<div class="col-md-12" id='container'></div>
+<body style="margin:0" >
+	<div>
+		<div id='container'>
 		</div>
 	</div>
 
