--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 	<title>App Fabric</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
-<body style="margin:0" >
+<body  style="margin:0;font-family:'Roboto'" >
 	<div>
 		<div id='container'>
 		</div>
